--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Cinzal web</title>
+        <title>Cinzal</title>
+        <link rel="icon" type="image/x-icon" href="/src/assets/imgs/logo.ico" />
     </head>
     <body>
         <div id="root"></div>
