--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -4,11 +4,11 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Cinzal</title>
-        <link rel="icon" type="image/x-icon" href="/src/assets/imgs/logo.ico" />
+        <link rel="icon" type="image/x-icon" href="/logo.ico" />
     </head>
     <body>
         <div id="root"></div>
 
-        <script type="module" src="/src/index.tsx"></script>
+        <script type="module" src="./src/index.tsx"></script>
     </body>
 </html>
