--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="A time-management and scheduling service" />
         <title>Cinzal</title>
         <link rel="icon" type="image/x-icon" href="/logo.ico" />
     </head>
