--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-0HH6B7HNR4"></script>
+        <script>
+            window.dataLayer = window.dataLayer || []
+            function gtag() {
+                dataLayer.push(arguments)
+            }
+            gtag('js', new Date())
+
+            gtag('config', 'G-0HH6B7HNR4')
+        </script>
+
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="A time-management and scheduling service" />
         <title>Cinzal</title>
         <link rel="icon" type="image/x-icon" href="/logo.ico" />
     </head>
+
     <body>
         <div id="root"></div>
 
